"Adding the name field and adding name and email onto the report printed."

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,6 +109,11 @@
             <b><div class="section-title">Contact</div></b><br>
 
             <div class="input-group">
+                <label>Patient Name</label>
+                <input id="name" type="text" required>
+            </div>
+
+            <div class="input-group">
                 <label>Email</label>
                 <input id="email" type="email" required>
             </div>
